--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "dotenv": "4.0.0",
     "jest": "^25.1.0",
-    "dotenv": "4.0.0"
+    "chance": "^1.1.7"
   }
 }
