--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest test/ --config=test/jest-config.js"
+    "test": "jest test/ --config=test/jest-config.js",
+    "release": "np"
   },
   "author": "krishna.kairi@outlook.com",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "chai": "4.1.2",
     "dotenv": "4.0.0",
     "jest": "^25.1.0",
-    "chance": "^1.1.7"
+    "chance": "^1.1.7",
+    "np": "*"
   }
 }
